# andrea.mangione.dev

./: .gitattributes  .gitignore  .prettierrc.json  Cargo.toml  README.md  astro.config.mjs  firebase.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.astro/: settings.json
.github/workflows/: firebase-hosting-merge.yml
public/: global.css  index.html  main.css
public/assets/Images/: airhockey.webm
public/tools/: manifest.json
src/: App.svelte  app.css  main.js  main.rs  main.ts
src/components/: Description.astro  FirstPage.svelte  Footer.svelte  InfinitePage.svelte  MyWorks.svelte  Projects.astro  Stacks.astro  TopBar.svelte  Topbar.astro  WhoAmI.svelte  mod.rs  pin_wheel.rs  stack_visualizer.rs  topbar.rs
src/components/InfiniteParts/: Projects.svelte  SmallDescription.svelte  Stacks.svelte
src/components/airhockey/: AirHockey.astro  AirHockey.svelte
src/components/blasingly-fast-calculator/: BlasinglyFastCalculator.astro
src/components/ditherrific/: ditherrific.astro
src/components/geo/: geolocation.svelte
src/components/gyro/: bubble.svelte
src/components/kotlin-firmata/: KotlinFirmata.astro  KotlinFirmata.svelte
src/elements/: Stack.svelte
src/elements/Compy/: Compy.svelte
src/elements/codeEditor/: CodeEditor.svelte
src/elements/compy/: Ball.svelte  Compy.svelte
src/elements/containers/: LanguageList.svelte
src/elements/dyno/: Dyno.svelte
src/elements/rain/: RainDrop.svelte  RainHandler.svelte
src/elements/stack/: SingleLanguages.svelte  Stack.svelte
src/helpers/: AnimeExtention.js  CommonFunctions.js  UnsteadyText.svelte  WaveingText.svelte
src/helpers/animejs/: fireworks.js
src/helpers/pixijs/: Colours.js  ParticleText.js  PixiComponent.js
src/layouts/: Layout.astro
src/lib/: Description.svelte  Projects.svelte  Stacks.svelte  Topbar.svelte
src/lib/airhockey/: AirHockey.svelte
src/lib/kotlin-firmata/: ArduinoSketch.svelte  KotlinFirmata.svelte
src/pages/: clarity.astro  index.astro
src/pages/tools/: index.astro  level.astro  location.astro
src/routes/: mod.rs
src/routes/blog/: mod.rs
src/routes/home/: about.rs  mod.rs  projects.rs  stack.rs
src/utils/: External.js  Flags.svelte  ScrollController.js  Stores.js
src/world/: World.svelte
src/world/environment/: Arrow.svelte  Sun.svelte  (+2 more)
style/: tailwind.css
(+27 files in other folders)
